# FFI-destruct

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: simple.rs
src/: destruct.rs  lib.rs  utils.rs
tests/: basic.rs
