[package]
name = "ffi-destruct"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["IInfo <info@i1nfo.com>"]
description = "Macros generate destructors for structures containing raw pointers."
keywords = [
    "ffi",
    "destructor",
    "macro",
    "drop",
    "struct",
    "raw-pointer",
    "derive",
]
categories = ["development-tools::ffi"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
