[package]
name = "ffi-destruct"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["IInfo <info@i1nfo.com>"]
repository = "https://github.com/I-Info/ffi-destruct"
homepage = "https://github.com/I-Info/ffi-destruct"
description = "Generates destructors for structures that contain raw pointers in the FFI."
keywords = ["ffi", "destructor", "macro", "drop", "derive"]
categories = ["development-tools::ffi"]
include = ["README.md", "src/**/*.rs", "LICENSE"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
